syntax = "proto3";

import "address.proto";
import "client.proto";
import "response-default.proto";

option java_multiple_files = true;
option java_package = "com.pb.proto.service";

package com.spring.poc.grpc;

service ClientService{
  rpc getClient(ClientRequest) returns (ClientMessage);
  rpc create(ClientMessage) returns (ClientMessage);
  rpc update(ClientMessage) returns (ClientMessage);
  rpc delete(ClientRequest) returns (ActionResponse);
  rpc getClients(EmptyRequest) returns (ClientMessageList);
  rpc getClientFilter(ClientMessage) returns (ClientMessageList);
}