syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pb.proto.message";

message ActionResponse{
  int64 id = 1;
  string message = 2;
  string code = 3;
}